# xenomai_tutorial

./: .gitignore  compile_xenomai_core.txt  readme.txt
01_rdwr_test/app/: mydrivertest.c
01_rdwr_test/mydriver/: .Module.symvers.cmd  mydriver.c
02_ioctl_test/mydriver/: .Module.symvers.cmd  .mydriver.ko.cmd  (+3 more)
imx/igh_ecat/devices/: 8139too-3.0-ethercat.c  8139too-3.10-ethercat.c  8139too-3.2-ethercat.c  8139too-3.4-ethercat.c  8139too-4.4-ethercat.c  8139too-5.10-ethercat.c  8139too-6.1-ethercat.c  Makefile.am  e100-3.0-ethercat.c  e100-3.10-ethercat.c  e100-3.12-ethercat.c  e100-3.14-ethercat.c  e100-3.6-ethercat.c  e100-3.8-ethercat.c  e100-4.4-ethercat.c  e100-5.14-ethercat.c  e100-5.4-ethercat.c  e100-6.1-ethercat.c  e100-6.4-ethercat.c  update.sh
imx/igh_ecat/devices/e1000/: Kbuild.in  e1000-4.4-ethercat.h  e1000-5.10-ethercat.h  e1000-5.14-ethercat.h  e1000-5.15-ethercat.h  e1000-6.1-ethercat.h  e1000_ethtool-5.14-ethercat.c  e1000_ethtool-5.15-ethercat.c  e1000_ethtool-6.1-ethercat.c  e1000_hw-5.14-ethercat.c  e1000_hw-5.14-ethercat.h  e1000_hw-5.15-ethercat.c  e1000_hw-6.1-ethercat.c  e1000_hw-6.1-ethercat.h  e1000_main-3.12-ethercat.c  e1000_main-3.16-ethercat.c  e1000_main-3.4-ethercat.c  e1000_main-3.8-ethercat.c  e1000_main-5.14-ethercat.c  e1000_main-5.15-ethercat.c  e1000_main-6.1-ethercat.c  e1000_param-6.1-ethercat.c  update.sh
imx/igh_ecat/devices/e1000e/: 80003es2lan-5.15-ethercat.c  82571-5.14-ethercat.c  82571-6.1-ethercat.c  e1000-5.10-ethercat.h  e1000-5.14-ethercat.h  e1000-5.15-ethercat.h  e1000-5.4-ethercat.h  ethtool-6.1-ethercat.c  hw-5.14-ethercat.h  hw-6.1-ethercat.h  ich8lan-5.14-ethercat.c  ich8lan-6.1-ethercat.c  mac-6.1-ethercat.c  manage-5.15-ethercat.c  manage-6.1-ethercat.c  netdev-3.6-ethercat.c  netdev-5.14-ethercat.c  netdev-5.15-ethercat.c  netdev-5.4-ethercat.c  param-5.14-ethercat.c  param-5.15-ethercat.c  ptp-5.14-ethercat.c  ptp-5.15-ethercat.c
imx/igh_ecat/devices/genet/: Makefile.am  bcmgenet-5.10-ethercat.c  bcmgenet-6.1-ethercat.c  bcmgenet-6.12-ethercat.c  bcmgenet-6.12-ethercat.h  bcmgenet_wol-5.10-ethercat.c  bcmgenet_wol-5.14-ethercat.c  bcmmii-6.12-ethercat.c
imx/igh_ecat/devices/igb/: Makefile.am  e1000_hw-6.1-ethercat.h  e1000_i210-5.14-ethercat.c  e1000_mac-5.14-ethercat.c  e1000_mac-6.1-ethercat.c  e1000_mbx-5.14-ethercat.h  e1000_mbx-6.1-ethercat.c  e1000_nvm-6.1-ethercat.c  igb-5.14-ethercat.h  igb-5.15-ethercat.h  igb_ethtool-5.14-ethercat.c  igb_ethtool-6.1-ethercat.c  igb_hwmon-6.1-ethercat.c  igb_main-3.18-ethercat.c  igb_main-5.15-ethercat.c  igb_main-6.1-ethercat.c  igb_ptp-5.14-ethercat.c  igb_ptp-6.1-ethercat.c
imx/igh_ecat/devices/igc/: igc-5.15-ethercat.h  igc-6.1-ethercat.h  igc_base-5.15-ethercat.c  igc_base-6.1-ethercat.c  igc_base-6.6-ethercat.c  igc_diag-5.14-ethercat.c  igc_diag-6.6-ethercat.c  igc_dump-5.14-ethercat.c  igc_dump-5.15-ethercat.c  igc_dump-6.1-ethercat.c  igc_dump-6.4-ethercat.c  igc_dump-6.6-ethercat.c  igc_ethtool-5.15-ethercat.c  igc_ethtool-6.4-ethercat.c  igc_hw-6.1-ethercat.h  igc_hw-6.6-ethercat.h  igc_i225-5.14-ethercat.c  igc_mac-5.14-ethercat.c  igc_mac-5.14-ethercat.h  igc_mac-5.15-ethercat.h  igc_mac-6.4-ethercat.c  igc_mac-6.4-ethercat.h  igc_mac-6.6-ethercat.h  igc_main-5.14-ethercat.c  igc_main-6.6-ethercat.c  igc_nvm-5.14-ethercat.c  igc_nvm-5.15-ethercat.c  igc_nvm-6.1-ethercat.c  igc_nvm-6.4-ethercat.c  igc_phy-5.14-ethercat.h  igc_phy-6.1-ethercat.c  igc_phy-6.4-ethercat.h  igc_phy-6.6-ethercat.c  igc_phy-6.6-ethercat.h  igc_ptp-5.14-ethercat.c  igc_ptp-5.15-ethercat.c  igc_ptp-6.4-ethercat.c  igc_ptp-6.6-ethercat.c  igc_tsn-6.4-ethercat.c  igc_xdp-5.14-ethercat.c  (+2 more)
imx/igh_ecat/devices/r8169/: r8169_firmware-5.15-ethercat.c  r8169_firmware-6.1-ethercat.c  r8169_main-5.15-ethercat.c  r8169_main-6.1-ethercat.c  r8169_phy_config-5.14-ethercat.c
imx/igh_ecat/devices/stmmac/: chain_mode-6.1-ethercat.c  dwmac-intel-6.1-ethercat.c  dwmac100-6.1-ethercat.h  dwmac1000_core-6.1-ethercat.c  dwmac1000_dma-6.1-ethercat.c  dwmac100_dma-6.1-ethercat.c  dwmac4_descs-6.1-ethercat.c  dwmac5-6.1-ethercat.c  enh_desc-6.1-ethercat.c  hwif-6.1-ethercat.c  mmc_core-6.1-ethercat.c  norm_desc-6.1-ethercat.c  ring_mode-6.1-ethercat.c  stmmac_ethtool-6.1-ethercat.c  stmmac_tc-6.1-ethercat.c  update.sh
imx/igh_ecat/fake_lib/: Makefile.am  fakeethercat.cpp
nxp/igh_ecat/devices/e1000e/: Makefile.am  e1000-6.1-ethercat.h  ich8lan-5.15-ethercat.c  mac-5.15-ethercat.c  manage-5.14-ethercat.c  netdev-3.10-ethercat.c  netdev-3.12-ethercat.c  netdev-3.14-ethercat.c  netdev-3.16-ethercat.c  netdev-3.4-ethercat.c  netdev-4.4-ethercat.c  netdev-5.10-ethercat.c  netdev-6.1-ethercat.c  param-6.1-ethercat.c  phy-5.14-ethercat.c  phy-6.1-ethercat.c  update.sh
nxp/igh_ecat/devices/stmmac/: Kbuild.in  Makefile.am  common-6.1-ethercat.h  dwmac1000-6.1-ethercat.h  dwmac4_core-6.1-ethercat.c  dwmac4_lib-6.1-ethercat.c  dwmac_lib-6.1-ethercat.c  dwxgmac2_core-6.1-ethercat.c  stmmac-6.1-ethercat.h  stmmac_hwtstamp-6.1-ethercat.c  stmmac_main-6.1-ethercat.c  stmmac_mdio-6.1-ethercat.c
nxp/igh_ecat/lib/: Makefile.am  ethercat-config.cmake.in  libethercat.map  libethercat.pc.in  master.c  reg_request.c  sdo_request.h  slave_config.h
rpi/: config_xeno
x86/: .gitignore  build_ecat.sh  config_ok_iotg  config_ok_iotg_20250919
x86/igh_ecat/devices/e1000/: Makefile.am  e1000_ethtool-5.10-ethercat.c  e1000_hw-5.15-ethercat.h  e1000_main-3.14-ethercat.c  e1000_main-3.6-ethercat.c  e1000_main-5.10-ethercat.c  e1000_param-5.14-ethercat.c
x86/igh_ecat/devices/igc/: Makefile.am  igc-6.6-ethercat.h  igc_base-6.4-ethercat.c  igc_diag-6.1-ethercat.c  igc_diag-6.4-ethercat.c  igc_ethtool-6.1-ethercat.c  igc_hw-5.14-ethercat.h  igc_i225-5.15-ethercat.c  igc_i225-6.4-ethercat.c  igc_i225-6.6-ethercat.c  igc_mac-6.1-ethercat.c  igc_mac-6.6-ethercat.c  igc_main-5.15-ethercat.c  igc_main-6.4-ethercat.c  igc_phy-5.14-ethercat.c  igc_phy-5.15-ethercat.h  igc_tsn-5.15-ethercat.c  igc_xdp-6.1-ethercat.c  update.sh
x86/igh_ecat/devices/r8169/: Makefile.am  r8169_phy_config-5.15-ethercat.c  r8169_phy_config-6.1-ethercat.c
(+1778 files in other folders)
