#------------------------------------------------------------------------------
#
#  Copyright (C) 2006-2023  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#------------------------------------------------------------------------------

include $(top_srcdir)/Makefile.kbuild

SUBDIRS = \
	ccat \
	e1000 \
	e1000e \
	genet \
	igb \
	igc \
	r8169 \
	stmmac

# using HEADERS to enable tags target
noinst_HEADERS = \
	8139too-3.0-ethercat.c \
	8139too-3.0-orig.c \
	8139too-3.10-ethercat.c \
	8139too-3.10-orig.c \
	8139too-3.12-ethercat.c \
	8139too-3.12-orig.c \
	8139too-3.14-ethercat.c \
	8139too-3.14-orig.c \
	8139too-3.16-ethercat.c \
	8139too-3.16-orig.c \
	8139too-3.2-ethercat.c \
	8139too-3.2-orig.c \
	8139too-3.4-ethercat.c \
	8139too-3.4-orig.c \
	8139too-3.6-ethercat.c \
	8139too-3.6-orig.c \
	8139too-3.8-ethercat.c \
	8139too-3.8-orig.c \
	8139too-4.4-ethercat.c \
	8139too-4.4-orig.c \
	8139too-5.10-ethercat.c \
	8139too-5.10-orig.c \
	8139too-5.14-ethercat.c \
	8139too-5.14-orig.c \
	8139too-5.15-ethercat.c \
	8139too-5.15-orig.c \
	8139too-6.1-ethercat.c \
	8139too-6.1-orig.c \
	create_driver_table.py \
	device_drivers_template.md \
	e100-3.0-ethercat.c \
	e100-3.0-orig.c \
	e100-3.10-ethercat.c \
	e100-3.10-orig.c \
	e100-3.12-ethercat.c \
	e100-3.12-orig.c \
	e100-3.14-ethercat.c \
	e100-3.14-orig.c \
	e100-3.16-ethercat.c \
	e100-3.16-orig.c \
	e100-3.4-ethercat.c \
	e100-3.4-orig.c \
	e100-3.6-ethercat.c \
	e100-3.6-orig.c \
	e100-3.8-ethercat.c \
	e100-3.8-orig.c \
	e100-4.4-ethercat.c \
	e100-4.4-orig.c \
	e100-5.4-ethercat.c \
	e100-5.4-orig.c \
	e100-5.10-ethercat.c \
	e100-5.10-orig.c \
	e100-5.14-ethercat.c \
	e100-5.14-orig.c \
	e100-5.15-ethercat.c \
	e100-5.15-orig.c \
	e100-6.1-ethercat.c \
	e100-6.1-orig.c \
	e100-6.4-ethercat.c \
	e100-6.4-orig.c \
	ecdev.h \
	generic.c \
	r8169-3.10-ethercat.c \
	r8169-3.10-orig.c \
	r8169-3.12-ethercat.c \
	r8169-3.12-orig.c \
	r8169-3.14-ethercat.c \
	r8169-3.14-orig.c \
	r8169-3.16-ethercat.c \
	r8169-3.16-orig.c \
	r8169-3.2-ethercat.c \
	r8169-3.2-orig.c \
	r8169-3.4-ethercat.c \
	r8169-3.4-orig.c \
	r8169-3.6-ethercat.c \
	r8169-3.6-orig.c \
	r8169-3.8-ethercat.c \
	r8169-3.8-orig.c \
	r8169-4.4-ethercat.c \
	r8169-4.4-orig.c

#------------------------------------------------------------------------------
