#------------------------------------------------------------------------------
#
#  Copyright (C) 2006-2021  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#------------------------------------------------------------------------------

include $(top_srcdir)/Makefile.kbuild

EXTRA_DIST = \
	bcmgenet-5.10-ethercat.c \
	bcmgenet-5.10-ethercat.h \
	bcmgenet-5.10-orig.c \
	bcmgenet-5.10-orig.h \
	bcmgenet-5.14-ethercat.c \
	bcmgenet-5.14-ethercat.h \
	bcmgenet-5.14-orig.c \
	bcmgenet-5.14-orig.h \
	bcmgenet-6.1-ethercat.c \
	bcmgenet-6.1-ethercat.h \
	bcmgenet-6.1-orig.c \
	bcmgenet-6.1-orig.h \
	bcmgenet-6.12-ethercat.c \
	bcmgenet-6.12-ethercat.h \
	bcmgenet-6.12-orig.c \
	bcmgenet-6.12-orig.h \
	bcmgenet_wol-5.10-ethercat.c \
	bcmgenet_wol-5.10-orig.c \
	bcmgenet_wol-5.14-ethercat.c \
	bcmgenet_wol-5.14-orig.c \
	bcmgenet_wol-6.1-ethercat.c \
	bcmgenet_wol-6.1-orig.c \
	bcmgenet_wol-6.12-ethercat.c \
	bcmgenet_wol-6.12-orig.c \
	bcmmii-5.14-ethercat.c \
	bcmmii-5.14-orig.c \
	bcmmii-5.10-ethercat.c \
	bcmmii-5.10-orig.c \
	bcmmii-6.1-ethercat.c \
	bcmmii-6.1-orig.c \
	bcmmii-6.12-ethercat.c \
	bcmmii-6.12-orig.c \
	unimac-5.14-ethercat.h \
	unimac-5.14-orig.h \
	unimac-6.1-ethercat.h \
	unimac-6.1-orig.h \
	unimac-6.12-ethercat.h \
	unimac-6.12-orig.h

#------------------------------------------------------------------------------
