#-----------------------------------------------------------------------------
#
#  Copyright (C) 2006-2008  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#-----------------------------------------------------------------------------

include $(top_srcdir)/Makefile.kbuild

EXTRA_DIST = \
	80003es2lan-3.10-ethercat.c \
	80003es2lan-3.10-ethercat.h \
	80003es2lan-3.10-orig.c \
	80003es2lan-3.10-orig.h \
	80003es2lan-3.12-ethercat.c \
	80003es2lan-3.12-ethercat.h \
	80003es2lan-3.12-orig.c \
	80003es2lan-3.12-orig.h \
	80003es2lan-3.14-ethercat.c \
	80003es2lan-3.14-ethercat.h \
	80003es2lan-3.14-orig.c \
	80003es2lan-3.14-orig.h \
	80003es2lan-3.16-ethercat.c \
	80003es2lan-3.16-ethercat.h \
	80003es2lan-3.16-orig.c \
	80003es2lan-3.16-orig.h \
	80003es2lan-3.4-ethercat.c \
	80003es2lan-3.4-orig.c \
	80003es2lan-3.6-ethercat.c \
	80003es2lan-3.6-orig.c \
	80003es2lan-3.8-ethercat.c \
	80003es2lan-3.8-orig.c \
	80003es2lan-4.4-ethercat.c \
	80003es2lan-4.4-ethercat.h \
	80003es2lan-4.4-orig.c \
	80003es2lan-4.4-orig.h \
	80003es2lan-5.10-ethercat.c \
	80003es2lan-5.10-ethercat.h \
	80003es2lan-5.10-orig.c \
	80003es2lan-5.10-orig.h \
	80003es2lan-5.14-ethercat.c \
	80003es2lan-5.14-ethercat.h \
	80003es2lan-5.14-orig.c \
	80003es2lan-5.14-orig.h \
	80003es2lan-5.15-ethercat.c \
	80003es2lan-5.15-ethercat.h \
	80003es2lan-5.15-orig.c \
	80003es2lan-5.15-orig.h \
	80003es2lan-5.4-ethercat.c \
	80003es2lan-5.4-ethercat.h \
	80003es2lan-5.4-orig.c \
	80003es2lan-5.4-orig.h \
	80003es2lan-6.1-ethercat.c \
	80003es2lan-6.1-orig.c \
	80003es2lan-6.1-ethercat.h \
	80003es2lan-6.1-orig.h \
	82571-3.10-ethercat.c \
	82571-3.10-ethercat.h \
	82571-3.10-orig.c \
	82571-3.10-orig.h \
	82571-3.12-ethercat.c \
	82571-3.12-ethercat.h \
	82571-3.12-orig.c \
	82571-3.12-orig.h \
	82571-3.14-ethercat.c \
	82571-3.14-ethercat.h \
	82571-3.14-orig.c \
	82571-3.14-orig.h \
	82571-3.16-ethercat.c \
	82571-3.16-ethercat.h \
	82571-3.16-orig.c \
	82571-3.16-orig.h \
	82571-3.2-ethercat.c \
	82571-3.2-orig.c \
	82571-3.4-ethercat.c \
	82571-3.4-orig.c \
	82571-3.6-ethercat.c \
	82571-3.6-orig.c \
	82571-3.8-ethercat.c \
	82571-3.8-orig.c \
	82571-4.4-ethercat.c \
	82571-4.4-ethercat.h \
	82571-4.4-orig.c \
	82571-4.4-orig.h \
	82571-5.4-ethercat.c \
	82571-5.4-ethercat.h \
	82571-5.4-orig.c \
	82571-5.4-orig.h \
	82571-5.10-ethercat.c \
	82571-5.10-ethercat.h \
	82571-5.10-orig.c \
	82571-5.10-orig.h \
	82571-5.14-ethercat.c \
	82571-5.14-ethercat.h \
	82571-5.14-orig.c \
	82571-5.14-orig.h \
	82571-5.15-ethercat.c \
	82571-5.15-ethercat.h \
	82571-5.15-orig.c \
	82571-5.15-orig.h \
	82571-6.1-ethercat.c \
	82571-6.1-orig.c \
	82571-6.1-ethercat.h \
	82571-6.1-orig.h \
	defines-3.10-ethercat.h \
	defines-3.10-orig.h \
	defines-3.12-ethercat.h \
	defines-3.12-orig.h \
	defines-3.14-ethercat.h \
	defines-3.14-orig.h \
	defines-3.16-ethercat.h \
	defines-3.16-orig.h \
	defines-3.2-ethercat.h \
	defines-3.2-orig.h \
	defines-3.4-ethercat.h \
	defines-3.4-orig.h \
	defines-3.6-ethercat.h \
	defines-3.6-orig.h \
	defines-3.8-ethercat.h \
	defines-3.8-orig.h \
	defines-4.4-ethercat.h \
	defines-4.4-orig.h \
	defines-5.10-ethercat.h \
	defines-5.10-orig.h \
	defines-5.14-ethercat.h \
	defines-5.14-orig.h \
	defines-5.15-ethercat.h \
	defines-5.15-orig.h \
	defines-5.4-ethercat.h \
	defines-5.4-orig.h \
	defines-6.1-ethercat.h \
	defines-6.1-orig.h \
	e1000-3.10-ethercat.h \
	e1000-3.10-orig.h \
	e1000-3.12-ethercat.h \
	e1000-3.12-orig.h \
	e1000-3.14-ethercat.h \
	e1000-3.14-orig.h \
	e1000-3.16-ethercat.h \
	e1000-3.16-orig.h \
	e1000-3.2-ethercat.h \
	e1000-3.2-orig.h \
	e1000-3.4-ethercat.h \
	e1000-3.4-orig.h \
	e1000-3.6-ethercat.h \
	e1000-3.6-orig.h \
	e1000-3.8-ethercat.h \
	e1000-3.8-orig.h \
	e1000-4.4-ethercat.h \
	e1000-4.4-orig.h \
	e1000-5.10-ethercat.h \
	e1000-5.10-orig.h \
	e1000-5.14-ethercat.h \
	e1000-5.14-orig.h \
	e1000-5.15-ethercat.h \
	e1000-5.15-orig.h \
	e1000-5.4-ethercat.h \
	e1000-5.4-orig.h \
	e1000-6.1-ethercat.h \
	e1000-6.1-orig.h \
	es2lan-3.2-ethercat.c \
	es2lan-3.2-orig.c \
	ethtool-3.10-ethercat.c \
	ethtool-3.10-orig.c \
	ethtool-3.12-ethercat.c \
	ethtool-3.12-orig.c \
	ethtool-3.14-ethercat.c \
	ethtool-3.14-orig.c \
	ethtool-3.16-ethercat.c \
	ethtool-3.16-orig.c \
	ethtool-3.2-ethercat.c \
	ethtool-3.2-orig.c \
	ethtool-3.4-ethercat.c \
	ethtool-3.4-orig.c \
	ethtool-3.6-ethercat.c \
	ethtool-3.6-orig.c \
	ethtool-3.8-ethercat.c \
	ethtool-3.8-orig.c \
	ethtool-4.4-ethercat.c \
	ethtool-4.4-orig.c \
	ethtool-5.10-ethercat.c \
	ethtool-5.10-orig.c \
	ethtool-5.14-ethercat.c \
	ethtool-5.14-orig.c \
	ethtool-5.15-ethercat.c \
	ethtool-5.15-orig.c \
	ethtool-5.4-ethercat.c \
	ethtool-5.4-orig.c \
	ethtool-6.1-ethercat.c \
	ethtool-6.1-orig.c \
	hw-3.10-ethercat.h \
	hw-3.10-orig.h \
	hw-3.12-ethercat.h \
	hw-3.12-orig.h \
	hw-3.14-ethercat.h \
	hw-3.14-orig.h \
	hw-3.16-ethercat.h \
	hw-3.16-orig.h \
	hw-3.2-ethercat.h \
	hw-3.2-orig.h \
	hw-3.4-ethercat.h \
	hw-3.4-orig.h \
	hw-3.6-ethercat.h \
	hw-3.6-orig.h \
	hw-3.8-ethercat.h \
	hw-3.8-orig.h \
	hw-4.4-ethercat.h \
	hw-4.4-orig.h \
	hw-5.10-ethercat.h \
	hw-5.10-orig.h \
	hw-5.14-ethercat.h \
	hw-5.14-orig.h \
	hw-5.4-ethercat.h \
	hw-5.4-orig.h \
	hw-6.1-ethercat.h \
	hw-6.1-orig.h \
	hw-5.15-ethercat.h \
	hw-5.15-orig.h \
	ich8lan-3.10-ethercat.c \
	ich8lan-3.10-ethercat.h \
	ich8lan-3.10-orig.c \
	ich8lan-3.10-orig.h \
	ich8lan-3.12-ethercat.c \
	ich8lan-3.12-ethercat.h \
	ich8lan-3.12-orig.c \
	ich8lan-3.12-orig.h \
	ich8lan-3.14-ethercat.c \
	ich8lan-3.14-ethercat.h \
	ich8lan-3.14-orig.c \
	ich8lan-3.14-orig.h \
	ich8lan-3.16-ethercat.c \
	ich8lan-3.16-ethercat.h \
	ich8lan-3.16-orig.c \
	ich8lan-3.16-orig.h \
	ich8lan-3.2-ethercat.c \
	ich8lan-3.2-orig.c \
	ich8lan-3.4-ethercat.c \
	ich8lan-3.4-orig.c \
	ich8lan-3.6-ethercat.c \
	ich8lan-3.6-orig.c \
	ich8lan-3.8-ethercat.c \
	ich8lan-3.8-orig.c \
	ich8lan-4.4-ethercat.c \
	ich8lan-4.4-ethercat.h \
	ich8lan-4.4-orig.c \
	ich8lan-4.4-orig.h \
	ich8lan-5.10-ethercat.c \
	ich8lan-5.10-ethercat.h \
	ich8lan-5.10-orig.c \
	ich8lan-5.10-orig.h \
	ich8lan-5.14-ethercat.c \
	ich8lan-5.14-ethercat.h \
	ich8lan-5.14-orig.c \
	ich8lan-5.14-orig.h \
	ich8lan-5.15-ethercat.c \
	ich8lan-5.15-ethercat.h \
	ich8lan-5.15-orig.c \
	ich8lan-5.15-orig.h \
	ich8lan-5.4-ethercat.c \
	ich8lan-5.4-ethercat.h \
	ich8lan-5.4-orig.c \
	ich8lan-5.4-orig.h \
	ich8lan-6.1-ethercat.c \
	ich8lan-6.1-orig.c \
	ich8lan-6.1-ethercat.h \
	ich8lan-6.1-orig.h \
	lib-3.2-ethercat.c \
	lib-3.2-orig.c \
	mac-3.10-ethercat.c \
	mac-3.10-ethercat.h \
	mac-3.10-orig.c \
	mac-3.10-orig.h \
	mac-3.12-ethercat.c \
	mac-3.12-ethercat.h \
	mac-3.12-orig.c \
	mac-3.12-orig.h \
	mac-3.14-ethercat.c \
	mac-3.14-ethercat.h \
	mac-3.14-orig.c \
	mac-3.14-orig.h \
	mac-3.16-ethercat.c \
	mac-3.16-ethercat.h \
	mac-3.16-orig.c \
	mac-3.16-orig.h \
	mac-3.4-ethercat.c \
	mac-3.4-orig.c \
	mac-3.6-ethercat.c \
	mac-3.6-orig.c \
	mac-3.8-ethercat.c \
	mac-3.8-orig.c \
	mac-4.4-ethercat.c \
	mac-4.4-ethercat.h \
	mac-4.4-orig.c \
	mac-4.4-orig.h \
	mac-5.10-ethercat.c \
	mac-5.10-ethercat.h \
	mac-5.10-orig.c \
	mac-5.10-orig.h \
	mac-5.14-ethercat.c \
	mac-5.14-ethercat.h \
	mac-5.14-orig.c \
	mac-5.14-orig.h \
	mac-5.4-ethercat.c \
	mac-5.4-ethercat.h \
	mac-5.4-orig.c \
	mac-5.4-orig.h \
	mac-6.1-ethercat.c \
	mac-6.1-orig.c \
	mac-6.1-ethercat.h \
	mac-6.1-orig.h \
	mac-5.15-ethercat.c \
	mac-5.15-ethercat.h \
	mac-5.15-orig.c \
	mac-5.15-orig.h \
	manage-3.10-ethercat.c \
	manage-3.10-ethercat.h \
	manage-3.10-orig.c \
	manage-3.10-orig.h \
	manage-3.12-ethercat.c \
	manage-3.12-ethercat.h \
	manage-3.12-orig.c \
	manage-3.12-orig.h \
	manage-3.14-ethercat.c \
	manage-3.14-ethercat.h \
	manage-3.14-orig.c \
	manage-3.14-orig.h \
	manage-3.16-ethercat.c \
	manage-3.16-ethercat.h \
	manage-3.16-orig.c \
	manage-3.16-orig.h \
	manage-3.4-ethercat.c \
	manage-3.4-orig.c \
	manage-3.6-ethercat.c \
	manage-3.6-orig.c \
	manage-3.8-ethercat.c \
	manage-3.8-orig.c \
	manage-4.4-ethercat.c \
	manage-4.4-ethercat.h \
	manage-4.4-orig.c \
	manage-4.4-orig.h \
	manage-5.10-ethercat.c \
	manage-5.10-ethercat.h \
	manage-5.10-orig.c \
	manage-5.10-orig.h \
	manage-5.14-ethercat.c \
	manage-5.14-ethercat.h \
	manage-5.14-orig.c \
	manage-5.14-orig.h \
	manage-5.15-ethercat.c \
	manage-5.15-ethercat.h \
	manage-5.15-orig.c \
	manage-5.15-orig.h \
	manage-5.4-ethercat.c \
	manage-5.4-ethercat.h \
	manage-5.4-orig.c \
	manage-5.4-orig.h \
	manage-6.1-ethercat.c \
	manage-6.1-orig.c \
	manage-6.1-ethercat.h \
	manage-6.1-orig.h \
	netdev-3.10-ethercat.c \
	netdev-3.10-orig.c \
	netdev-3.12-ethercat.c \
	netdev-3.12-orig.c \
	netdev-3.14-ethercat.c \
	netdev-3.14-orig.c \
	netdev-3.16-ethercat.c \
	netdev-3.16-orig.c \
	netdev-3.2-ethercat.c \
	netdev-3.2-orig.c \
	netdev-3.4-ethercat.c \
	netdev-3.4-orig.c \
	netdev-3.6-ethercat.c \
	netdev-3.6-orig.c \
	netdev-3.8-ethercat.c \
	netdev-3.8-orig.c \
	netdev-4.4-ethercat.c \
	netdev-4.4-orig.c \
	netdev-5.10-ethercat.c \
	netdev-5.10-orig.c \
	netdev-5.14-ethercat.c \
	netdev-5.14-orig.c \
	netdev-5.15-ethercat.c \
	netdev-5.15-orig.c \
	netdev-5.4-ethercat.c \
	netdev-5.4-orig.c \
	netdev-6.1-ethercat.c \
	netdev-6.1-orig.c \
	nvm-3.10-ethercat.c \
	nvm-3.10-ethercat.h \
	nvm-3.10-orig.c \
	nvm-3.10-orig.h \
	nvm-3.12-ethercat.c \
	nvm-3.12-ethercat.h \
	nvm-3.12-orig.c \
	nvm-3.12-orig.h \
	nvm-3.14-ethercat.c \
	nvm-3.14-ethercat.h \
	nvm-3.14-orig.c \
	nvm-3.14-orig.h \
	nvm-3.16-ethercat.c \
	nvm-3.16-ethercat.h \
	nvm-3.16-orig.c \
	nvm-3.16-orig.h \
	nvm-3.4-ethercat.c \
	nvm-3.4-orig.c \
	nvm-3.6-ethercat.c \
	nvm-3.6-orig.c \
	nvm-3.8-ethercat.c \
	nvm-3.8-orig.c \
	nvm-4.4-ethercat.c \
	nvm-4.4-ethercat.h \
	nvm-4.4-orig.c \
	nvm-4.4-orig.h \
	nvm-5.10-ethercat.c \
	nvm-5.10-ethercat.h \
	nvm-5.10-orig.c \
	nvm-5.10-orig.h \
	nvm-5.14-ethercat.c \
	nvm-5.14-ethercat.h \
	nvm-5.14-orig.c \
	nvm-5.14-orig.h \
	nvm-5.15-ethercat.c \
	nvm-5.15-ethercat.h \
	nvm-5.15-orig.c \
	nvm-5.15-orig.h \
	nvm-5.4-ethercat.c \
	nvm-5.4-ethercat.h \
	nvm-5.4-orig.c \
	nvm-5.4-orig.h \
	nvm-6.1-ethercat.c \
	nvm-6.1-orig.c \
	nvm-6.1-ethercat.h \
	nvm-6.1-orig.h \
	param-3.10-ethercat.c \
	param-3.10-orig.c \
	param-3.12-ethercat.c \
	param-3.12-orig.c \
	param-3.14-ethercat.c \
	param-3.14-orig.c \
	param-3.16-ethercat.c \
	param-3.16-orig.c \
	param-3.2-ethercat.c \
	param-3.2-orig.c \
	param-3.4-ethercat.c \
	param-3.4-orig.c \
	param-3.6-ethercat.c \
	param-3.6-orig.c \
	param-3.8-ethercat.c \
	param-3.8-orig.c \
	param-4.4-ethercat.c \
	param-4.4-orig.c \
	param-5.10-ethercat.c \
	param-5.10-orig.c \
	param-5.14-ethercat.c \
	param-5.14-orig.c \
	param-5.15-ethercat.c \
	param-5.15-orig.c \
	param-5.4-ethercat.c \
	param-5.4-orig.c \
	param-6.1-ethercat.c \
	param-6.1-orig.c \
	phy-3.10-ethercat.c \
	phy-3.10-ethercat.h \
	phy-3.10-orig.c \
	phy-3.10-orig.h \
	phy-3.12-ethercat.c \
	phy-3.12-ethercat.h \
	phy-3.12-orig.c \
	phy-3.12-orig.h \
	phy-3.14-ethercat.c \
	phy-3.14-ethercat.h \
	phy-3.14-orig.c \
	phy-3.14-orig.h \
	phy-3.16-ethercat.c \
	phy-3.16-ethercat.h \
	phy-3.16-orig.c \
	phy-3.16-orig.h \
	phy-3.2-ethercat.c \
	phy-3.2-orig.c \
	phy-3.4-ethercat.c \
	phy-3.4-orig.c \
	phy-3.6-ethercat.c \
	phy-3.6-orig.c \
	phy-3.8-ethercat.c \
	phy-3.8-orig.c \
	phy-4.4-ethercat.c \
	phy-4.4-ethercat.h \
	phy-4.4-orig.c \
	phy-4.4-orig.h \
	phy-5.10-ethercat.c \
	phy-5.10-ethercat.h \
	phy-5.10-orig.c \
	phy-5.10-orig.h \
	phy-5.14-ethercat.c \
	phy-5.14-ethercat.h \
	phy-5.14-orig.c \
	phy-5.14-orig.h \
	phy-5.15-ethercat.c \
	phy-5.15-ethercat.h \
	phy-5.15-orig.c \
	phy-5.15-orig.h \
	phy-5.4-ethercat.c \
	phy-5.4-ethercat.h \
	phy-5.4-orig.c \
	phy-5.4-orig.h \
	phy-6.1-ethercat.c \
	phy-6.1-orig.c \
	phy-6.1-ethercat.h \
	phy-6.1-orig.h \
	ptp-3.10-ethercat.c \
	ptp-3.10-orig.c \
	ptp-3.12-ethercat.c \
	ptp-3.12-orig.c \
	ptp-3.14-ethercat.c \
	ptp-3.14-orig.c \
	ptp-3.16-ethercat.c \
	ptp-3.16-orig.c \
	ptp-4.4-ethercat.c \
	ptp-4.4-orig.c \
	ptp-5.10-ethercat.c \
	ptp-5.10-orig.c \
	ptp-5.14-ethercat.c \
	ptp-5.14-orig.c \
	ptp-5.15-ethercat.c \
	ptp-5.15-orig.c \
	ptp-5.4-ethercat.c \
	ptp-5.4-orig.c \
	ptp-6.1-ethercat.c \
	ptp-6.1-orig.c \
	regs-3.10-ethercat.h \
	regs-3.10-orig.h \
	regs-3.12-ethercat.h \
	regs-3.12-orig.h \
	regs-3.14-ethercat.h \
	regs-3.14-orig.h \
	regs-3.16-ethercat.h \
	regs-3.16-orig.h \
	regs-4.4-ethercat.h \
	regs-4.4-orig.h \
	regs-5.10-ethercat.h \
	regs-5.10-orig.h \
	regs-5.14-ethercat.h \
	regs-5.14-orig.h \
	regs-5.15-ethercat.h \
	regs-5.15-orig.h \
	regs-5.4-ethercat.h \
	regs-5.4-orig.h \
	regs-6.1-ethercat.h \
	regs-6.1-orig.h \
	update.sh

#-----------------------------------------------------------------------------
