#-----------------------------------------------------------------------------
#
#  Copyright (C) 2006-2021  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#-----------------------------------------------------------------------------

include $(top_srcdir)/Makefile.kbuild

EXTRA_DIST = \
	chain_mode-6.1-ethercat.c \
	chain_mode-6.1-orig.c \
	common-6.1-ethercat.h \
	common-6.1-orig.h \
	descs-6.1-ethercat.h \
	descs-6.1-orig.h \
	descs_com-6.1-ethercat.h \
	descs_com-6.1-orig.h \
	dwmac1000-6.1-ethercat.h \
	dwmac1000-6.1-orig.h \
	dwmac1000_core-6.1-ethercat.c \
	dwmac1000_core-6.1-orig.c \
	dwmac1000_dma-6.1-ethercat.c \
	dwmac1000_dma-6.1-orig.c \
	dwmac100-6.1-ethercat.h \
	dwmac100-6.1-orig.h \
	dwmac100_core-6.1-ethercat.c \
	dwmac100_core-6.1-orig.c \
	dwmac100_dma-6.1-ethercat.c \
	dwmac100_dma-6.1-orig.c \
	dwmac4-6.1-ethercat.h \
	dwmac4-6.1-orig.h \
	dwmac4_core-6.1-ethercat.c \
	dwmac4_core-6.1-orig.c \
	dwmac4_descs-6.1-ethercat.c \
	dwmac4_descs-6.1-ethercat.h \
	dwmac4_descs-6.1-orig.c \
	dwmac4_descs-6.1-orig.h \
	dwmac4_dma-6.1-ethercat.c \
	dwmac4_dma-6.1-ethercat.h \
	dwmac4_dma-6.1-orig.c \
	dwmac4_dma-6.1-orig.h \
	dwmac4_lib-6.1-ethercat.c \
	dwmac4_lib-6.1-orig.c \
	dwmac5-6.1-ethercat.c \
	dwmac5-6.1-ethercat.h \
	dwmac5-6.1-orig.c \
	dwmac5-6.1-orig.h \
	dwmac_dma-6.1-ethercat.h \
	dwmac_dma-6.1-orig.h \
	dwmac-intel-6.1-ethercat.c \
	dwmac-intel-6.1-ethercat.h \
	dwmac-intel-6.1-orig.c \
	dwmac-intel-6.1-orig.h \
	dwmac_lib-6.1-ethercat.c \
	dwmac_lib-6.1-orig.c \
	dwxgmac2-6.1-ethercat.h \
	dwxgmac2-6.1-orig.h \
	dwxgmac2_core-6.1-ethercat.c \
	dwxgmac2_core-6.1-orig.c \
	dwxgmac2_descs-6.1-ethercat.c \
	dwxgmac2_descs-6.1-orig.c \
	dwxgmac2_dma-6.1-ethercat.c \
	dwxgmac2_dma-6.1-orig.c \
	dwxlgmac2-6.1-ethercat.h \
	dwxlgmac2-6.1-orig.h \
	enh_desc-6.1-ethercat.c \
	enh_desc-6.1-orig.c \
	hwif-6.1-ethercat.c \
	hwif-6.1-ethercat.h \
	hwif-6.1-orig.c \
	hwif-6.1-orig.h \
	mmc-6.1-ethercat.h \
	mmc-6.1-orig.h \
	mmc_core-6.1-ethercat.c \
	mmc_core-6.1-orig.c \
	norm_desc-6.1-ethercat.c \
	norm_desc-6.1-orig.c \
	ring_mode-6.1-ethercat.c \
	ring_mode-6.1-orig.c \
	stmmac-6.1-ethercat.h \
	stmmac-6.1-orig.h \
	stmmac_ethtool-6.1-ethercat.c \
	stmmac_ethtool-6.1-orig.c \
	stmmac_hwtstamp-6.1-ethercat.c \
	stmmac_hwtstamp-6.1-orig.c \
	stmmac_main-6.1-ethercat.c \
	stmmac_main-6.1-orig.c \
	stmmac_mdio-6.1-ethercat.c \
	stmmac_mdio-6.1-orig.c \
	stmmac_pci-6.1-ethercat.c \
	stmmac_pci-6.1-orig.c \
	stmmac_pcs-6.1-ethercat.h \
	stmmac_pcs-6.1-orig.h \
	stmmac_ptp-6.1-ethercat.c \
	stmmac_ptp-6.1-ethercat.h \
	stmmac_ptp-6.1-orig.c \
	stmmac_ptp-6.1-orig.h \
	stmmac_tc-6.1-ethercat.c \
	stmmac_tc-6.1-orig.c \
	stmmac_xdp-6.1-ethercat.c \
	stmmac_xdp-6.1-ethercat.h \
	stmmac_xdp-6.1-orig.c \
	stmmac_xdp-6.1-orig.h

#-----------------------------------------------------------------------------
